--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "date-fns": "^2.28.0",
     "gray-matter": "^4.0.3",
     "next": "12.1.0",
+    "next-themes": "^0.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "remark": "^14.0.2",
