--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "@types/react-syntax-highlighter": "^15.5.5",
     "date-fns": "^2.28.0",
     "gray-matter": "^4.0.3",
     "next": "12.1.0",
+    "next-mdx-remote": "^4.1.0",
     "next-themes": "^0.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-syntax-highlighter": "^15.5.0",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1"
   },
