--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "postcss": "^8.4.7",
     "tailwindcss": "^3.0.23",
     "typescript": "4.6.2"
+  },
+  "resolutions": {
+    "@types/react": "^17.0.39"
   }
 }
