--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
@@ -28,6 +29,7 @@
     "autoprefixer": "^10.4.2",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
+    "next-sitemap": "^3.1.21",
     "postcss": "^8.4.7",
     "tailwindcss": "^3.0.23",
     "typescript": "4.6.2"
