--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "build": "next build",
     "postbuild": "next-sitemap",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier-fix": "prettier --write ."
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
-    "@types/react-syntax-highlighter": "^15.5.5",
     "date-fns": "^2.28.0",
     "gray-matter": "^4.0.3",
     "next": "12.1.0",
@@ -25,16 +25,19 @@
     "remark-html": "^15.0.1"
   },
   "devDependencies": {
+    "@next/env": "^12.3.0",
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
+    "@types/react-syntax-highlighter": "^15.5.5",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
     "autoprefixer": "^10.4.2",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
     "eslint-plugin-tailwindcss": "^3.6.0",
-    "next-sitemap": "^3.1.21",
+    "next-sitemap": "^3.1.22",
     "postcss": "^8.4.7",
+    "prettier": "^2.7.1",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.8.2"
   },
